# TiTUS

./: CMakeLists.txt  README.md
cmake/: FindLEMON.cmake
data/: sample_host.out  sample_ptree.out  sample_ttrees.out
scripts/: filter.py  make_plots.ipynb  parseUniGen.py
scripts/.ipynb_checkpoints/: make_plots-checkpoint.ipynb
src/: basetree.cpp  basetree.h  dimacs.cpp  dimacs.h  dimacsmain.cpp  fptmain.cpp  fptsolver.cpp  fptsolver.h  gammamain.cpp  naive.cpp  naive.h  naivemain.cpp  samplenaivemain.cpp  scttmain.cpp  scttsolver.cpp  scttsolver.h  transmissiontree.cpp  transmissiontree.h  ttree.txt  unigenparser.cpp  unigenparser.h  unigenparsermain.cpp  utils.h
